--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://test1:aawsdawfasdawdsaw@cluster0.ibne0.mongodb.net/blogdb
-CORS_ORIGIN=https://blog-list-fg26fpx49-prreyanshus-projects.vercel.app
+CORS_ORIGIN=http://localhost:5173
