--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,13 @@
 {
   "rewrites": [
     { "source": "/(.*)", "destination": "/" }
+  ],
+
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/main.tsx",
+      "methods": ["GET", "POST"]
+    }
   ]
 }
