--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "https://blog-list-08.onrender.com",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
